addition of test data
Former-commit-id: d59dd3aae49ff8cdf1e4e17719ac410050972a08 [formerly 15e7962a9e0c15e90bce10fc1bdc2c045263db6e]
Former-commit-id: b4976784cc2a01f5e39d87e3f936932fd00ba21d
Former-commit-id: 27dd4911b8a82c47e2cc5a6abbfb91f402e0d517
Former-commit-id: b22273eb97177bd58fd7d92836e0a2ac4c03f0f7

--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "CAncer bioMarker Prediction Pipeline 2 (CAMPP2)"
 author:
-- name: Thilde Bagger Terkelsen
-  affiliation: Danish Cancer Society Research Center
 - name: Nikola Tom
   affiliation: Technical University of Denmark
   email: 1nikola.tom@gmail.com
+- name: Thilde Bagger Terkelsen
+  affiliation: Danish Cancer Society Research Center
 package: campp2
 output:
   BiocStyle::html_document
@@ -24,6 +24,8 @@ vignette: |
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+# This vignette still needs to be updated!
+
 # About CAMPP
 The CAncer bioMarker Prediction Pipeline was developed for internal
 use at the Danish Cancer Society Research Center (DCRC) providing
