--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -1,22 +1,23 @@
 ---
 title: "CAncer bioMarker Prediction Pipeline 2 (CAMPP2)"
-author:
-- name: Nikola Tom
-  affiliation: Technical University of Denmark
-  email: 1nikola.tom@gmail.com
+authors:
+- names: Nikola Tom, Matteo Tiberti, Elena Papaleo
+  affiliations: Technical University of Denmark, Danish Cancer Society Research Center
+  email: nikto@dtu.dk, tiberti@cancer.dk, elpap@dtu.dk, elenap@cancer.dk
 package: CAMPP2
 output:
   BiocStyle::html_document
-abstract: (TO BE EDITED)
-  The CAncer bioMarker Prediction Pipeline (CAMPP) is a simple
-  bioinformatics tool intended to automatize identification of potential
-  diagnostic and prognostic cancer biomarkers. The pipeline is versatile
-  and may be used for analysis of a variety of quantitative biological
-  data from high throughput platforms, including genes, proteins, small
-  RNAs, lipids and glycans. CAMPP currently supports; differential expression/
-  abundance analysis, LASSO/Elastic Net regression,Weighed
-  Gene Co-expression Network Analysis, Correlation analysis and Survival
-  analysis (Cox proportional hazard regression).
+abstract: 
+  The CAncer bioMarker Prediction Pipeline 2 (CAMPP2) is a R package designed to be
+  submitted to Bioconductor. It is a tool for downstream analyses which is agnostic
+  with respect to the source of -omics  biological data. It requires that data
+  quantification has been carried out before using the data as inputs in the pipeline. 
+  The pipeline is versatile and the functions or part of them can be used for analysis 
+  of a variety of quantitative biological data from high throughput platforms, 
+  including genes, proteins, small RNAs, lipids and glycans. 
+  CAMPP2 currently supports; differential expression/abundance analysis, 
+  LASSO/Elastic Net regression,Weighed Gene Co-expression Network Analysis, 
+  Correlation analysis and Survival analysis (Cox proportional hazard regression).
 vignette: |
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
@@ -24,13 +25,6 @@ vignette: |
 ---
 
 # About CAMPP (TO BE EDITED)
-The CAncer bioMarker Prediction Pipeline was developed for internal
-use at the Danish Cancer Society Research Center (DCRC) providing
-researchers with an easy way to identify biomarkers for cancer diagnostics
-and prognostics. In its original form the pipeline was implemented
-using interstitial fluid samples and tissue samples from patients with
-breast cancer but it may be applied to any type of data with comparable
-properties.
 The pipeline can perform the following types of analysis (|) Differential
 expression/abundance analysis (limma [26]), (II) LASSO/Elastic-Net
 regression (glmnet [12]), (III) Weighed Gene Co-expression Network
@@ -82,7 +76,7 @@ should be OK before interpreting any results!
 
 # Requirements
 
-To run CAMPP, a working R version 4.0.0 (or newer) is required.
+To run CAMPP2, a working R version 4.0.0 (or newer) is required.
 
 The Pipeline relies on a variety of R-packages which are installed
 during CAMPP2 installation.
@@ -110,9 +104,9 @@ List of dependencies: (KEEP THIS? if yes, needs to be updated)
 # Running CAMPP2
 
 ## Example data
-Test data include 2 BRCA datasets (campp2_brca_1, campp2_brca_2) and associated metadata (campp2_brca_1_meta, campp2_brca_2_meta). Each dataset is represented by raw read counts for 25 samples (15 tumours, 10 normals in the 1st dataset; 18 tumours and 7 normals in the 2nd dataset). Metadata includes information about diagnosis, age, vital status, days to death, outcome time, tumor stage, outcome and survival.
+The test data include 2 BRCA datasets (campp2_brca_1, campp2_brca_2) and associated metadata (campp2_brca_1_meta, campp2_brca_2_meta). Each dataset is represented by raw read counts for 25 samples (15 tumor, 10 normal samples in the 1st dataset; 18 tumors and 7 normal samples in the 2nd dataset). Metadata includes information about diagnosis, age, vital status, days to death, outcome time, tumor stage, outcome and survival.
 
-Both, raw read counts and metadata were extracted from TCGA BReast CAncer dataset using in-house scripts. 
+Both, raw read counts and metadata were extracted from TCGA-BRCA Level 3. 
 
 Test data are integrated into CAMPP2 package and accessible as campp2_brca_1, campp2_brca_2, campp2_brca_1_meta, campp2_brca_2_meta variables once the package is installed. R data object files (.rda) are also available in a data/ directory of CAMPP2 package.
 
@@ -126,7 +120,7 @@ runCampp2(batches=c("tumor_stage","tumor_stage"),prefix="test_CAMPP2", data1=cam
 
 ## Mandatory Input and Parameters
 
-**data1**: Gene count matrix (gene IDs as row names and sample IDs as columns). It's recommended to import gene counts using function "import_counts". \
+**data1**: Gene count matrix (gene IDs as row names and sample IDs as columns). It is recommended to import gene counts using function "import_counts". \
 
 **metadata1**: Samples' metadata table should be imported using function "import_metadata". Metadata must include exactly the same samples as gene counts (data1) and samples must be sorted similarly. \
 
@@ -187,7 +181,7 @@ runCampp2(batches=c("tumor_stage","tumor_stage"),prefix="test_CAMPP2", data1=cam
 
 ### ReplaceNAs \
 **Description:** \
-The features (rows) and samples (columns) with high proportion of "NAs" will be removed based on defined thresholds (70% for rows and 80% for columns by default). Remaining "NA" values will be replaced by imputed values. Missing value imputation is done using llsImpute (1st round). If 1st round wasn't successful or resulted in negative values, impute.knn algorithm is applied (rows with more than 50% missing values will be imputed using the overall mean per sample). \
+The features (rows) and samples (columns) with high proportion of "NAs" will be removed based on defined thresholds (70% for rows and 80% for columns by default). Remaining "NA" values will be replaced by imputed values. Missing value imputation is done using llsImpute (1st round). If 1st round was not successful or resulted in negative values, impute.knn algorithm is applied (rows with more than 50% missing values will be imputed using the overall mean per sample). \
 **Parameters:** \
 data: a dataframe of gene/abundance counts. \
 pct.NA.row: a number defining maximal percentage of NA values per row (feature). Rows with a higher percentage of NA values will be removed (70 by default). \
