minor changes in documentation of example data
Former-commit-id: 934cb4f4a89be5d5e2d23b9d7b9bca2c0fb53ef7 [formerly d8ff7e88de465109dc7f31d51f9d538bf71b66e3]
Former-commit-id: 1975f1d9f049342a9e80212664aad7f2529ffa4d
Former-commit-id: 1ffff41cbc7b7617218ac4c9aa725347c6adeee1
Former-commit-id: 3fdbe73a6e530d1a1ed24f477c8cf3598245aeb7

--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -116,12 +116,12 @@ Test data are integrated into CAMPP2 package and accessible as campp2_brca_1, ca
 ```
 library(CAMPP2)
 ```
-##Test data are already part of the CAMPP2 package so user doesn't need to download them. In case you want to load .rda objects you can alter the path and use this code:
+##Test data are already part of the CAMPP2 package so user doesn't need to download them. In case you want to load .rda objects manually from the cloned repository, you can use this code:
 ```
-load("/path/to/campp2_brca_1.rda")
-load("/path/to/campp2_brca_1_meta.rda")
-load("/path/to/campp2_brca_2.rda")
-load("/path/to/campp2_brca_2_meta.rda")
+load("./data/campp2_brca_1.rda")
+load("./data/campp2_brca_1_meta.rda")
+load("./data/campp2_brca_2.rda")
+load("./data/campp2_brca_2_meta.rda")
 ```
 
 ##Run CAMPP2 on example data with default settings:
