minor change in vignette
Former-commit-id: 88bea04093462379f28cc568a7eb3a5bd9d22d7d [formerly bca58b7e3fd881e6c679236575b1c7d3ab969b71]
Former-commit-id: 754e883d5d928d235b42f31e8b07d4f62f94c81a
Former-commit-id: d2cc55500c9cdf211560ed1733eea0d0beb85ce3
Former-commit-id: 49faa1051da8f866bba036514ecc96afea305dec

--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -204,7 +204,7 @@ In the first step of this function, percentages of NAs in rows (features) and co
 **Output from the function:**  \
 A data frame without NA values \
 **An example run:** \
-##In each of the 2 datasets, we have 10000 genes and all of them have assigned read counts. In our example, we will randomly introduce 1000 NAs into each sample in the first step. Next, NA values will be replaced by calling ReplaceNAs function. 
+##Each of the CAMPP2 example datasets (2) has 10000 genes and all of them have assigned read counts. In our example, we will randomly introduce 1000 NA values into each sample's genes (taking dataset campp2_brca_1) in the first step in order to prepare test data for NA values replacement. In the next step, NA values will be replaced by calling ReplaceNAs function. 
 
 ```
 library(CAMPP2)
