new example data with subtypes
Former-commit-id: 0774daeb770c94ba209cd891e42c7830b1be1cbc [formerly 6a61e85ea3b196b0e5b4f02e847896832c34cef6]
Former-commit-id: d50aaa0629bf89895c92e17f25488b7ed295b720
Former-commit-id: 4e2ee36d942dcb98bb4d98e0450af1a3f824a696
Former-commit-id: 11c92e40aebcfe5d951293fc86f09c2fd63b5f39

--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -104,7 +104,7 @@ List of dependencies: (KEEP THIS? if yes, needs to be updated)
 # Running CAMPP2
 
 ## Example data
-The test data include 2 BRCA datasets (campp2_brca_1, campp2_brca_2) and associated metadata (campp2_brca_1_meta, campp2_brca_2_meta). Each dataset is represented by raw read counts for 25 samples (15 tumor, 10 normal samples in the 1st dataset; 18 tumors and 7 normal samples in the 2nd dataset). Metadata includes information about diagnosis, age, vital status, days to death, outcome time, tumor stage, outcome and survival.
+The test data include 2 BRCA datasets (campp2_brca_1, campp2_brca_2) and associated metadata (campp2_brca_1_meta, campp2_brca_2_meta). Each dataset is represented by raw read counts for 30 samples: 20 tumours which are divided into 4 subtypes (each subtype has 5 samples), and 10 normals. Metadata includes information about diagnosis, age, vital status, days to death, outcome time, tumor stage, subtyte, outcome and survival.
 
 Both, raw read counts and metadata were extracted from TCGA-BRCA Level 3. 
 
