--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -226,9 +226,7 @@ n<-nrow(campp2_brca_1)
 Na_dataset1<-apply (campp2_brca_1, 2, function(x) {x[sample( c(1:n), floor(n/10))] <- NA; x} )
 ``` 
 
-##create an object with replaced NAs; features having "NA" in more than 70% 
-of the samples will be removed; samples having "NA" in more than 80% 
-of the genes will be removed
+##create an object with replaced NAs; features having "NA" in more than 70% of the samples will be removed; samples having "NA" in more than 80% of the genes will be removed
 ```
 replacedNAs<-ReplaceNAs(data=Na_dataset1, pct.NA.row=70, pct.NA.column=80) 
 ```
