--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -214,6 +214,10 @@ library(CAMPP2)
 
 ```
 load("./data/campp2_brca_1.rda")
+load("./data/campp2_brca_1_meta.rda")
+load("./data/campp2_brca_2.rda")
+load("./data/campp2_brca_2_meta.rda")
+
 ``` 
 
 ##get a number of genes in the dataset.
@@ -223,14 +227,12 @@ n<-nrow(campp2_brca_1)
 
 ##For testing of this function, 1000 genes is assegned with NA value. NA values are introduced randomly into each sample and all the 10000 genes (n=10000) are considered for the introduction of NA values.
 ```
-Na_dataset1<-apply (campp2_brca_1, 2, function(x) {x[sample( c(1:n), floor(n/10))] <- NA; x} )
+campp2_brca_1_NAs<-apply (campp2_brca_1, 2, function(x) {x[sample( c(1:n), floor(n/10))] <- NA; x} )
 ``` 
 
-##create an object with replaced NAs; features having "NA" in more than 70% 
-of the samples will be removed; samples having "NA" in more than 80% 
-of the genes will be removed
+##create an object with replaced NAs; features having "NA" in more than 70% of the samples will be removed; samples having "NA" in more than 80% of the genes will be removed
 ```
-replacedNAs<-ReplaceNAs(data=Na_dataset1, pct.NA.row=70, pct.NA.column=80) 
+campp2_brca_1_replacedNAs<-ReplaceNAs(data=campp2_brca_1_NAs, pct.NA.row=70, pct.NA.column=80) 
 ```
 \
 
@@ -243,65 +245,62 @@ removed (e.g. genes represented by zero counts/transcripts in more than n sample
 Next, remaining zeros are substituted with minimal values (>0) observed in each feature across all samples in the dataset. \
 **Parameters:** \
 *data* a dataframe of gene/abundance counts. \
-*group* a factor specifying samples' group which should be represented by a column from a metadata file. \
-*remove.sparse.features* a logical argument (TRUE/FALSE) for removal of features with sum of zero counts larger than the size of the smallest 
-sample group, and for replacing the remaining zeros. Default is TRUE. \
+*group* group a factor specifying group for each sample (e.g. could be represented by a column from a metadata file).\
+*remove.sparse.features* a logical argument (TRUE/FALSE) for removal of features with sum of zero counts larger than the size of the smallest sample group, and for replacing the remaining zeros. Default is TRUE. \
 **Output from the function:**  \
-a data frame with fixed zeros. Features having sum of zero counts higher than the size of the smallest sample group are removed and remaining zeros will be replaced by default. \
+a data frame with fixed zeros. Features having sum of zero counts higher than the size of the smallest sample group are removed and remaining zeros are replaced by default. \
 **An example run:** \
-
-```
-library(CAMPP2)
-``` 
-
-##Test data are already part of the CAMPP2 package so user doesn't need to download them. In case you want to load .rda objects manually from the cloned repository, you can use this code:
-
-```
-load("./data/campp2_brca_1.rda")
-``` 
-
 
 ##Create an object with fixed zeros:
 ```
-zerofix<-FixZeros(data=campp2_brca_1,group=campp2_brca_1_meta$diagnosis, remove.sparse.features=TRUE)
+###Dataset without NA values ("campp2_brca_1_replacedNAs" generated in a previous step) is used as an input.
+campp2_brca_1_zeroFix<-FixZeros(data=campp2_brca_1_replacedNAs,group=campp2_brca_1_meta$diagnosis, remove.sparse.features=TRUE)
 ```
 \
 
 ### NormalizeData 
 **Description:** \
-This function normalizes and transforms feature counts depending on data types and selected normalization/standardization methods. 
-Transformation methods include options log2, logit and log10. If technology is "seq", a Voom transform is applied automatically.
+This function normalizes and transforms feature counts depending on data types ("seq", "array", "ms", "other") and selected normalization/standardization methods. 
+Transformation methods include options for "log2", "logit" and "log10." If technology is "seq", a Voom transform is applied automatically.
 Standardization methods options include "mean" or "median". If technology is "seq" or "array", this option is ignored, instead, sequencing data are normalized by "TMM"; micro-arrays data are normalized by "quantile" standardization. \
 **Parameters:** \
 *data* a dataframe of expression/abundance counts \
-*group* a factor specifying samples' group (e.g. could be represented by a column from a metadata file). \
+*group* a factor specifying group for each sample (e.g. could be represented by a column from a metadata file) \
 *transform* a string vector of length 1 defining transformation type ("log2", "logit", "log10"). If technology is "seq", this option is ignored a Voom transform is applied. \
 *standardize* a string vector of length 1 defining standardization method ("mean" or "median"). If technology is "seq" or "array", this option is ignored, instead, seq data are normalized by "TMM"; array data are normalized by "quantile" standardization. \
-*technology* a string vector of length 1 defining technology used for generating the data. Allowed types are: 'array', 'seq', 'ms' or 'other'. \
+*technology* a string vector of length 1 defining technology used for generating the data. Allowed types are: "array", "seq", "ms" or "other". \
 **Output from the function:**  \
-Elist (seq technology) or array (array, ms, other technologies) of normalized, 
-filtered and transformed feature counts data \
+an Elist ("seq" technology) or array ("array", "ms", "other" technologies) of normalized and transformed feature counts data \
 **An example run:** \
-
-```
-library(CAMPP2)
-``` 
-
-##Test data are already part of the CAMPP2 package so user doesn't need to download them. In case you want to load .rda objects manually from the cloned repository, you can use this code:
-
-```
-load("./data/campp2_brca_1.rda")
-``` 
-
 
 ##Create an object with normalized gene counts
 ```
-normalized_data<-NormalizeData(data=campp2_brca_1,group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",technology="seq")
+###Dataset without zero values ("campp2_brca_1_zeroFix" generated in the previous step) is used as an input.
+campp2_brca_1_normalized<-NormalizeData(data=campp2_brca_1_zeroFix,group=campp2_brca_1_meta$diagnosis,standardize="TMM",transform="voom",technology="seq")
+```
+\
+
+### BatchCorrect 
+**Description:** \
+This function removes batch effects (using ComBat function) which could be causing a significant heterogeneity across batches of data.
+Batch corrected data are intended for explanatory purposes, NOT for a DEA analysis.
+ \
+**Parameters:** \
+*data* an Elist ("seq" technology) or a matrix ("array", "ms", "other" technologies) of normalized and transformed feature (e.g. gene) counts data \
+*batch* a factor specifying batch for each sample (e.g. could be represented by a column from a metadata file) \
+*group* a factor specifying group for each sample (e.g. could be represented by a column from a metadata file) \
+*technology* a string vector of length 1 defining technology used for generating the data. Allowed types are: "array", "seq", "ms" or "other" \
+**Output from the function:** \
+a list including matrix (array) of batch corrected feature counts \
+**An example run:** \
+
+##Create an object with batch corrected feature (gene) counts
+```
+###Normalized data ("campp2_brca_1_normalized" generated in a previous step) are used as an input.
+campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,technology="seq") 
 ```
 
-\
-\
-\
+
 
 
 
