--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -86,7 +86,7 @@ List of dependencies: (KEEP THIS? if yes, needs to be updated)
 
 &nbsp;
 
-(THIS SHOULD BE UPDATED)
+<!-- THIS SHOULD BE UPDATED -->
 | Analysis Packages         |   
 |---------------------------|---------------------------------------------------------------------------------------------------|
 | Missing value imputation  | impute (v 1.56.0) [17]                                                                            |
@@ -171,9 +171,9 @@ technology=c("seq","seq"))
 
 **signif**: Cut-offs for log fold change (logFC) and corrected p-value (fdr), defining significant hits (proteins, genes, miRNAs or N-features). If argument is set, it must be a numeric vector, where the first element specifies the cut-off for logFC and the second element specifies the cut-off for corrected p-value (fdr).  In case of 2 datasets, vector must be of length 4. By default, cutoffs will be set to -1 > logFC > 1 and corrected p-values < 0.05.
 
-**plot.PCA**:  Argument specifies ("TRUE" or "FALSE") if a preliminary PCA plot should be made for data overview. Default is FALSE (do not run).
+**plot.PCA**:  Argument specifies ("TRUE" or "FALSE") if a preliminary plot should be made for data overview. Default is FALSE (do not run).
 
-**PCA.labels** a text ("all", "none) specifying the elements to be labelled. Default value is "none".
+**show.PCA.labels** a boolean value (TRUE or FALSE) specifying if elements (e.g. samples) should be labelled (for PCAPlot and runKmeans functions). Labeling is based on column names of the input data. Default value is FALSE.
 
 **covariates**: Covariates to include in the analysis. If multiple of these, they should be specified as a character vector. The first element in this list must be either TRUE or FALSE. If TRUE is specified then covariates will be included in both DE/DA analysis and Survival Analsysis. If FALSE is specified covariates will ONLY be used for Survival Analsysis. Names of covariates should match the desired columns in the metadata file. Default is NULL.
 
@@ -309,96 +309,36 @@ campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,batch=c
 
 ### PCAPlot 
 **Description:** \
-A function calculating PCA. PCA plot shows the relationships
+A function calculating Principal component analysis (PCA). 
+PCA is a method for dimensionality reduction.
+PCA plot shows the relationships
 between samples (based on squared euclidean distances) in the data set.
 Each dot represents one sample. This function provides also a scree plot
-describing percentages of explained variances by each PCA component and
-plots with contributions of variables (e.g. genes) to PCA1 and PCA2. 
-Top 3 PCA components are visualized in 3D plot.
+describing percentages of explained variances by each principal component and
+plots with contributions of variables (e.g. genes) to PC1 and PC2. 
+Top 3 PC components are visualized in 3D plot.
 \
 **Parameters:** \
 *data* a dataframe of expression/abundance counts \
 *group* a factor specifying group for each sample (e.g. could be represented by a column from a metadata file) \
 *cols* a vector of colors (one color for each group) \
-*PCA.labels* a text ("all", "none) specifying the elements to be labelled. Default value is "none" \
+*show.PCA.labels* a boolean value (TRUE or FALSE) specifying if elements
+(e.g. samples) should be labelled. Labeling is based on column names of
+the input data. Default value is FALSE. \
 **Output from the function:** \
 1) scree plot \
 2) contributions of variables to PC1 \
 3) contributions of variables to PC2 \
-4) 2D PCA plot \
-5) 3D PCA plot \
+4) 2D PCA plot (projections of the samples on the first 2 principal components) \
+5) 3D PCA plot (projections of the samples on the first 3 principal components) \
 \
 **An example run:** \
 ##Run PCA on object with batch corrected feature (gene) counts
 ```
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
-PCAPlot(campp2_brca_1_batchCorrected, as.factor(campp2_brca_1_meta$subtype), PCA.labels ="none", cols=NULL, prefix="test_PCA_plot")
+PCAPlot(campp2_brca_1_batchCorrected, as.factor(campp2_brca_1_meta$subtype), show.PCA.labels=FALSE, cols=NULL, prefix="test_PCA_plot")
 ```
 \
-
-
-### EstimateKmeans
-**Description:** \
-A function to estimate the number of K-means. A Number of K-means is based 
-on the Bayesian information criterion (BIC) provided by mclust package. 
-A summary describing the best model is printed on the screen during the 
-calculation.
-\
-**Parameters:** \
-*data* a data.frame of feature (e.g. gene) counts \
-**Output from the function:** \
-a data frame with the number of clusters \
-\
-**An example run:** \
-##Estimate number of K-means 
-```
-###Sub-sampled (the first 2000 genes) normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated before) are used as an input.
-EstimateKmeans(t(campp2_brca_1_batchCorrected[1:2000,]))
-```
-\
-
-
-### runKmeans
-**Description:** \
-A wrapper function for K-means clustering.
-In order to speed up the analysis, for data sets with >1000 features, multiple 
-subsets (number of sets = number of features/1000; rounded up to the higher 
-integer) will be generated, maximum is 10 subsets. A number of randomly selected 
-features (e.g. genes) in 1 subset is limited to 2000.
-A number of clusters for each subset is automatically estimated using BIC and
-a consensus (based on all the subsets) of best n k-means is returned and used
-for clustering.
-If K-means estimation using BIC fails, a number of clusters will be based on
-the number of samples (2-6 clusters for data set with less than 100 samples;
-2-11 for data sets with 101-500 samples, and 2-16 clusters for data sets with
-more than 500 samples).
-As a result, an information about the clusters assigned to each sample and
-the details from PCA are provided (might be used e.g. for a customized PCA plots).
-The clusters are visualized on a PCA plot and saved into the png.
-A summary describing the best model is printed on the screen during
-calculation.
-\
-**Parameters:** \
-*data* a data.frame of feature (e.g. gene) counts \
-*PCA.labels* a string vector ("all" or "none") specifying which elements
-(e.g. samples) should be labelled (labeling is based on column names of the
-input data). Default value is "none". \
-*cols* a vector of colors (one color for each group) \
-*prefix* a character string defining a prefix of output file. \
-*num.km.clusters* a vector of manually defined number(s) of clusters. By default, the values(s) are calculated
-automatically (a default value is NULL). \
-**Output from the function:** \
-1) a data.frame with cluster information assigned to each sample \
-2) a list of results from PCA \
-3) PCA plot(s) saved into png \
-**An example run:** \
-
-##Estimate number of K-means and assign a specific cluster to each sample
-```
-###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
-Kmeans.output<-runKmeans(campp2_brca_1_batchCorrected, PCA.labels = "all", cols=NULL, prefix="test_kmeans", num.km.clusters=NULL)
-```
-
 
 
 
@@ -467,7 +407,7 @@ metadataset 2.
 
 ## Other Arguments
 \
-MDS REMOVED
+<!-- MDS removed -->
 **Multidimensional* Scaling plot** (MDS): The MDS may be set
 to generate a preliminary multidimensional scaling (MDS) plot.
 Multidimensional scaling (MDS) reduces high-dimensional data
