fix description of seed parameter
Former-commit-id: 61410ce26ad55d996d6368430380b3313c85d475 [formerly 8bbcad7a628f3eb5b1aca070e4c16e23fd535354]
Former-commit-id: 0a7422ac9b5faa5b31c146665beca3735fc113c3
Former-commit-id: f8dd620263d688b270a9c5e1ebace8e883175dcd
Former-commit-id: ecb9fee6f264c93db8a01b536fba1e81608269bf

--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -418,7 +418,8 @@ perform K-means clustering based on each (expected number of clusters) of
 them separately. By default, expected numbers of clusters are calculated
 automatically based on BIC (mclust package) applied to sub-sampled data sets.
 A default value for this parameter is NULL. \
-*seed* a seed for K-means clustering. Defaults is NULL. \
+*seed* a number for setting a random seed. If the argument is NULL,
+the seed won't be set. Default is NULL. \
 *pca.scale* a boolean, if TRUE then data are scaled to unit variance
 during PCA. Default is FALSE \
 \
